<resources>
    <string name="app_name">Veterinaria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment: %d</string>
    <string name="first_button_text">First</string>
    <string name="second_button_text">Second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="third_button">Third Button</string>
    <string name="to_third_f">to third f.</string>
    <string name="prova">prova</string>
    <string name="digit">Digit here</string>
    <string name="firebase">Firebase</string>

</resources>